--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -9,7 +9,7 @@ body {
 
 #hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0)),
-    url("/public/assets/hero.jpg");
+    url("/public/assets/images/hero.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -36,10 +36,17 @@ body {
   box-shadow: inset 0 0px 4px 0px black, inset 0 0px 4px 0px black;
 }
 
-#main div {
+#main > div {
+  display: flex;
+}
+
+#main .text {
+  width: 50%;
+  margin-right: 10%;
   padding: 20px 0;
 }
 
-#main div p {
-  width: 50%;
+#main > div img {
+  width: 30%;
+  margin-right: 10%;
 }
