--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -31,7 +31,7 @@ body {
   margin: 0;
 }
 
-#main div:nth-child(even) {
+#main > div:nth-child(even) {
   background-color: #353535;
   box-shadow: inset 0 0px 4px 0px black, inset 0 0px 4px 0px black;
 }
@@ -46,7 +46,21 @@ body {
   padding: 20px 0 20px 2%;
 }
 
-#main > div img {
+#main .images {
   width: 30%;
   margin-right: 3%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+#main .images img {
+  width: 100%;
+}
+
+#main .images p {
+  font-style: italic;
+  color: #bdbdbd;
+  margin: 10px 0 30px;
+  width: 100%;
 }
