--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: black;
   color: white;
@@ -9,7 +13,7 @@ body {
 
 #hero {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0)),
-    url("/public/assets/images/hero.jpg");
+    url("/assets/images/hero.jpg");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -63,4 +67,31 @@ body {
   color: #bdbdbd;
   margin: 10px 0 30px;
   width: 100%;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+nav a:hover {
+  color: #8e8e8e;
+}
+
+nav {
+  background-color: #353535;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+}
+
+nav a:first-child {
+  margin-left: 20px;
+}
+
+nav a:last-child {
+  margin-right: 20px;
 }
