--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -31,6 +31,12 @@ body {
   padding: 20px 0 20px 2%;
 }
 
+#main .text p {
+  font-size: 18px;
+  text-indent: 40px;
+  line-height: 23px;
+}
+
 #main .images {
   width: 30%;
   margin-right: 3%;
